Authentication and landing page done

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nostalgia Charts | Not Found</title>
-</head>
+<html>
+  <%- include ('./partials/head.ejs') %>
 <body>
-  
+  <div class="bg">
+    <div class="container error-container">
+      <div class="card">
+        <div class="card-content">
+          <h3>Não consegui achar a página que você estava procurando! :(</h3>
+        </div>
+      </div>
+    </div>
+  </div> 
 </body>
 </html>
