--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -6,7 +6,7 @@
   
   <%- include ('./partials/nav.ejs') %>
   <div class="container">
-    <h1>Bem vindo!</h1>
+    <h1>Bem vindo! <%= name %></h1>
   </div>
 </body>
 
