--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -5,10 +5,63 @@
 <body>
   
   <%- include ('./partials/nav.ejs') %>
-  <div class="container">
-    <h1>Bem vindo! <%= name %></h1>
+  <!-- Page Layout here -->
+
+  <div class="row dashboard-row">
+    
+    <div class="col s12 m4 l2 dashboard-sidebar z-depth-2"> <!-- Note that "m4 l3" was added -->
+      <!-- Grey navigation p  anel
+        a
+            This content will be:
+        3-columns-wide on large screens,
+        4-columns-wide on medium screens,
+        12-columns-wide on small screens  -->
+        <img class="dashboard-icon border" src="<%= image%>"/>
+        <h3>Oi <%= name%>!</h3>
+
+        <ul class="dashboard-sidebar">
+          <li><p><a href="/">Home</a></p></li>
+          <li><p><a href="/profile">Meu Perfil</a></p></li>
+          <li><p><a href="/groups">Meus Grupos</a></p></li>
+          <li><p><a href="/charts">Meus Charts</a></p></li>
+          <li><a href=""></a></li>
+        </ul>
+    </div>
+
+    <div class="col s12 m8 l10 dashboard-container centering"> <!-- Note that "m8 l9" was added -->
+      <div class="row dashboard-row">
+        <h2>Janeiro 2021</h2>
+      </div>
+      <!-- Teal page content
+        a
+            This content will be:
+        9-columns-wide on large screens,
+        8-columns-wide on medium screens,
+        12-columns-wide on small screens  -->
+        <div class="col l4">
+          <img class="dashboard-img border" src="suho.png"/>
+          <h4>Artista Mais Ouvido</h4>
+          <h5>B1A4</h5>
+          <h6>196 Scrobbles</h6>
+        </div>
+        <div class="col l4">
+          <img class="dashboard-img border" src="b1a4.png"/>
+          <h4>Álbum Mais Ouvido</h4>
+          <h5>SUHO - Self Portrait</h5>
+          <h6>72 Scrobbles</h6>
+        </div>
+        <div class="col l4">
+          <img class="dashboard-img border" src="b1a4.png"/>
+          <h4>Música Mais Ouvida</h4>
+          <h5>SUHO - O2</h5>
+          <h6>14 Scrobbles</h6>
+        </div>
+    </div>
   </div>
 </body>
-
 <%- include('./partials/footer.ejs') %>
+<script>
+  var activeLink = document.getElementById("home");
+  activeLink.classList.add("active");
+</script>
 </html>
