--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,3 @@
-<footer class="flow-text">
+<footer class="page-footer orange darken-3">
   Copyright &copy; <a href="https://github.com/paulovgf"">Paulo Victor</a> 2021
 </footer>
