--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,12 +1,71 @@
-<nav>
-  <div class="nav-wrapper nav-container">
-    <img src="ICON.png" class="brand-logo logo"></img>
-    <p class="logo-text">Nostalgia Charts</p>
-    <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="sass.html">Perfil</a></li>
-      <li><a href="sass.html">Grupo</a></li>
-      <li><a href="badges.html">Charts</a></li>
-      <li><a href="collapsible.html">Logout</a></li>
-    </ul>
-  </div>
+
+  <nav>
+    <div class="nav-wrapper orange darken-3">
+      <a href="/dashboard" class="brand-logo"><i class="far fa-chart-bar logo"></i> Nostalgia Charts</a>
+      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      <ul class="right hide-on-med-and-down">
+        <li id="home">
+          <a href="/dashboard" title="Home">
+            <i class="material-icons">home</i> 
+          </a>
+        </li>
+        <li>
+          <a href="/profile" title="Perfil">
+            <i class="material-icons">account_circle</i> 
+          </a>
+        </li>
+        <li>
+          <a href="/groups" title="Grupos">
+            <i class="material-icons">group</i> 
+          </a>
+        </li>
+        <li>
+          <a href="/charts" title="Charts">
+            <i class="material-icons">insert_chart</i> 
+          </a>
+        </li>
+        <li>
+          <a href="/logout" title="Logout">
+            <i class="material-icons">power_settings_new</i>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <ul class="sidenav" id="mobile-demo">
+    <li id="home">
+      <a href="/dashboard" title="Home">
+        <i class="material-icons">home</i> Home
+      </a>
+    </li>
+    <li>
+      <a href="/profile" title="Perfil">
+        <i class="material-icons">account_circle</i> Perfil
+      </a>
+    </li>
+    <li>
+      <a href="/groups" title="Grupos">
+        <i class="material-icons">group</i> Grupos
+      </a>
+    </li>
+    <li>
+      <a href="/charts" title="Charts">
+        <i class="material-icons">insert_chart</i> Charts
+      </a>
+   </li>
+    <li>
+      <a href="/logout" title="Logout">
+        <i class="material-icons">power_settings_new</i>Logout
+      </a>
+    </li>
+  </ul>
 </nav>
+
+<script> 
+  document.addEventListener('DOMContentLoaded', function() {
+    var options = {}
+    var elems = document.querySelectorAll('.sidenav');
+    var instances = M.Sidenav.init(elems, options);
+  }); 
+</script>
