--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,17 +8,15 @@
   <!-- Page Layout here -->
 
   <div class="row dashboard-row">
-    
-    <div class="col s12 m4 l2 dashboard-sidebar z-depth-2"> <!-- Note that "m4 l3" was added -->
-      <!-- Grey navigation p  anel
-        a
-            This content will be:
-        3-columns-wide on large screens,
-        4-columns-wide on medium screens,
-        12-columns-wide on small screens  -->
-        <img class="dashboard-icon border" src="<%= image%>"/>
-        <h3>Oi <%= name%>!</h3>
 
+    <!-- Sidebar -->
+    <div class="col s12 m4 l2 dashboard-sidebar z-depth-2"> 
+        <img class="dashboard-icon border" src="<%= image%>"/>
+        <% if (name) { %>
+          <h4>Oi <%= name %>!</h4>
+        <% } else { %>
+          <h4>Oi <%= username %>!</h4>
+        <% } %>
         <ul class="dashboard-sidebar">
           <li><p><a href="/">Home</a></p></li>
           <li><p><a href="/profile">Meu Perfil</a></p></li>
@@ -28,33 +26,31 @@
         </ul>
     </div>
 
+    <!-- Main container -->
     <div class="col s12 m8 l10 dashboard-container centering"> <!-- Note that "m8 l9" was added -->
       <div class="row dashboard-row">
         <h2>Janeiro 2021</h2>
       </div>
-      <!-- Teal page content
-        a
-            This content will be:
-        9-columns-wide on large screens,
-        8-columns-wide on medium screens,
-        12-columns-wide on small screens  -->
+        <!-- First column -->
         <div class="col l4">
-          <img class="dashboard-img border" src="suho.png"/>
           <h4>Artista Mais Ouvido</h4>
-          <h5>B1A4</h5>
-          <h6>196 Scrobbles</h6>
+          <img class="dashboard-img border" src=<%= artist.image %>>
+          <h5><%= artist.name %></h5>
+          <h6><%= artist.playcount %> Scrobbles</h6>
         </div>
+        <!-- Second column -->
         <div class="col l4">
-          <img class="dashboard-img border" src="b1a4.png"/>
           <h4>Álbum Mais Ouvido</h4>
-          <h5>SUHO - Self Portrait</h5>
-          <h6>72 Scrobbles</h6>
+          <img class="dashboard-img border" src=<%= album.image %>/>
+          <h5><%= album.artist['#text'] %> — <%= album.name %></h5>
+          <h6><%= album.playcount %> Scrobbles</h6>
         </div>
+        <!-- Third column -->
         <div class="col l4">
-          <img class="dashboard-img border" src="b1a4.png"/>
           <h4>Música Mais Ouvida</h4>
-          <h5>SUHO - O2</h5>
-          <h6>14 Scrobbles</h6>
+          <img class="dashboard-img border" src=<%= track.image %>>
+          <h5><%= track.artist['#text'] %> — <%= track.name %></h5>
+          <h6><%= track.playcount %> Scrobbles</h6>
         </div>
     </div>
   </div>
