--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,7 @@
 <footer class="page-footer orange darken-3">
+  <div class="footer-icons">
+    <i class="fab fa-github"></i> <i class="fab fa-lastfm"></i> <i class="fab fa-linkedin"></i>
+  </div>
+  <br>
   Copyright &copy; <a href="https://github.com/paulovgf"">Paulo Victor</a> 2021
 </footer>
