--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -9,12 +9,12 @@
             <i class="material-icons">home</i> 
           </a>
         </li>
-        <li>
+        <li id="profile">
           <a href="/profile" title="Perfil">
             <i class="material-icons">account_circle</i> 
           </a>
         </li>
-        <li>
+        <li id="groups">
           <a href="/groups" title="Grupos">
             <i class="material-icons">group</i> 
           </a>
